crates/meilisearch/tests/dynamic_search_rules/snapshots/mod.rs/search_pumps_pins_when_organic_results_run_out/offset_2_limit_2.snap
---
source: crates/meilisearch/tests/dynamic_search_rules/mod.rs
---
[
  {
    "id": "late-pin-1"
  },
  {
    "id": "late-pin-2"
  }
]
